# ohtu-2021

Week 1/nhl-statistics-1/src/tests/: statistics_test.py
Week 2/poetry-web/: pyproject.toml
Week 2/project-reader/src/: project_reader.py
Week 2/verkkokauppa-1/src/: index.py  kauppa.py  pankki.py  varasto.py
Week 3/login-robot/src/services/: user_service.py
Week 3/login-robot/src/tests/: login.robot  register.robot
Week 3/nhl-reader/src/: index.py  player.py  playerReader.py  playerStats.py
Week 3/web-login-robot/src/services/: user_service.py
Week 3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
Week 4/maksukortti-mock/src/tests/: kassapaate_test.py
Week 4/tennis-typescript/src/: index.ts
Week 4/tennis-typescript/tests/: TennisTest.test.ts
Week 4/verkkokauppa/src/tests/: kauppa_test.py
Week 5/laskin/src/: kayttoliittyma.py
Week 6/query-language/src/: matcher_builder.py  matchers.py  query_builder.py
Week 7/kivi-paperi-sakset/src/: index.py  moves.py  referee.py  rps.py  rps_ai.py  rps_better_ai.py  rps_human.py  rps_player.py
