[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Emma Koskinen <25252659+emsknock@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
jsonpickle = "1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
